Bugfixes for New Tkt View
 - Back to Top icon functionality is missing(FF/IE) #969
 - Close button is not working #973
 - Misalignment in recent ticket view #971

--- a/public/src/app/tkt_details.scss
+++ b/public/src/app/tkt_details.scss
@@ -2674,7 +2674,7 @@ $collision_delay: 1s;
 
 
 // Overriding common elements for new details page
-.ticket_show {
+.ticket_details {
 	div.watchers_tooltip {
 		margin: 30px 0px 0px -10px;
 	}
